--- a/index.html
+++ b/index.html
@@ -3,109 +3,373 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صفحه تبریک تولد</title>
-    <!-- لینک به Tailwind CSS CDN برای استایلینگ سریع و واکنش‌گرا -->
+    <title>بازی Flappy Bird</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- لینک به فونت Vazirmatn از Google Fonts برای نمایش بهتر متن فارسی -->
-    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
-        /* تنظیمات کلی برای body برای استفاده از فونت Vazirmatn و اطمینان از نمایش تمام صفحه */
+        @import url('https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap');
         body {
             font-family: 'Vazirmatn', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #2c3e50; /* پس زمینه تیره */
             margin: 0;
-            padding: 0;
-            overflow: hidden; /* جلوگیری از اسکرول غیرضروری */
+            overflow: hidden; /* جلوگیری از اسکرول */
         }
-        /* کلاس‌های سفارشی برای انیمیشن‌های ورود و خروج پیام تبریک */
-        .fade-in-out {
-            animation: fadeInOut 3s ease-in-out forwards;
+        .game-container {
+            position: relative;
+            background-color: #34495e; /* پس زمینه روشن‌تر برای کانتینر */
+            border-radius: 20px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+            max-width: 90vw; /* حداکثر عرض برای موبایل */
+            max-height: 90vh; /* حداکثر ارتفاع برای موبایل */
+        }
+        canvas {
+            background-color: #70c5ce; /* رنگ آسمان */
+            display: block;
+            border-radius: 10px;
+            border: 5px solid #2980b9;
+            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+        .game-info {
+            position: absolute;
+            top: 20px;
+            width: calc(100% - 40px);
+            display: flex;
+            justify-content: space-between;
+            padding: 0 10px;
+            color: white;
+            font-size: 1.5rem;
+            font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        #score, #high-score {
+            background-color: rgba(0, 0, 0, 0.4);
+            padding: 5px 15px;
+            border-radius: 10px;
+        }
+        #game-over-screen {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 2rem;
+            text-align: center;
+            gap: 20px;
+            visibility: hidden; /* مخفی در ابتدا */
+            opacity: 0;
+            transition: visibility 0s, opacity 0.5s linear;
+            border-radius: 10px; /* برای همخوانی با canvas */
+        }
+        #game-over-screen.active {
+            visibility: visible;
+            opacity: 1;
+        }
+        #restart-button {
+            padding: 15px 30px;
+            background: linear-gradient(145deg, #2ecc71, #27ae60); /* سبز گرادیان */
+            color: white;
+            border: none;
+            border-radius: 15px;
+            font-size: 1.2rem;
+            font-weight: bold;
+            cursor: pointer;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+            transition: all 0.3s ease;
+            transform: translateY(0);
+        }
+        #restart-button:hover {
+            background: linear-gradient(145deg, #27ae60, #2ecc71);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.4);
+            transform: translateY(-2px);
+        }
+        #restart-button:active {
+            transform: translateY(1px);
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
         }
 
-        @keyframes fadeInOut {
-            0% { opacity: 0; transform: translate(-50%, -50%) scale(0.8); }
-            20% { opacity: 1; transform: translate(-50%, -50%) scale(1); }
-            80% { opacity: 1; transform: translate(-50%, -50%) scale(1); }
-            100% { opacity: 0; transform: translate(-50%, -50%) scale(0.8); }
+        /* طراحی واکنشگرا */
+        @media (max-width: 640px) {
+            .game-info {
+                font-size: 1.2rem;
+                top: 10px;
+            }
+            #game-over-screen {
+                font-size: 1.5rem;
+                gap: 15px;
+            }
+            #restart-button {
+                padding: 12px 25px;
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
-<body class="h-screen w-screen flex items-center justify-center bg-gradient-to-br from-purple-600 via-pink-500 to-red-600 p-4">
+<body class="bg-gradient-to-br from-indigo-500 to-purple-600">
+    <div class="game-container">
+        <canvas id="gameCanvas"></canvas>
 
-    <!-- کانتینر اصلی برای مرکز قرار دادن محتوا و اضافه کردن یک افکت پس‌زمینه جذاب -->
-    <div class="relative w-full max-w-lg mx-auto">
-        <!-- جعبه تبریک تولد - مرکز توجه اصلی صفحه -->
-        <div id="birthdayBox"
-             class="bg-white p-6 md:p-10 lg:p-12 rounded-3xl shadow-2xl
-                    flex flex-col items-center justify-center text-center
-                    cursor-pointer transform transition-all duration-300
-                    hover:scale-105 hover:shadow-3xl
-                    border-4 border-transparent hover:border-pink-400
-                    relative z-10 overflow-hidden">
-
-            <!-- افکت براق در پس‌زمینه جعبه -->
-            <div class="absolute inset-0 bg-gradient-to-br from-purple-200 to-pink-200 opacity-20 transform -rotate-45 scale-150 blur-lg"></div>
-
-            <!-- متن "KIT KAT" با استایل جذاب گرادیانت -->
-            <h1 class="text-6xl md:text-7xl lg:text-8xl font-black mb-4
-                       text-transparent bg-clip-text bg-gradient-to-r
-                       from-red-500 via-orange-500 to-yellow-500 drop-shadow-lg">
-                KIT KAT
-            </h1>
-
-            <!-- متن اصلی تبریک با استایل زیبا -->
-            <p class="text-3xl md:text-4xl lg:text-5xl font-extrabold
-                      text-gray-800 leading-tight">
-                تولدت مبارک
-            </p>
-            <p class="text-xl md:text-2xl lg:text-3xl font-bold mt-2
-                      text-gray-600">
-                از طرف سپهر
-            </p>
-        </div>
-
-        <!-- پیام پاپ‌آپ تبریک که بعد از کلیک ظاهر می‌شود -->
-        <div id="messageBox"
-             class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2
-                    bg-blue-600 text-white px-8 py-4 rounded-xl shadow-xl z-50
-                    opacity-0 pointer-events-none transition-opacity duration-300
-                    text-4xl md:text-5xl font-extrabold text-center">
-            تولدت مبارک!
+        <div id="game-over-screen">
+            <h2 class="text-3xl font-bold">بازی تمام شد!</h2>
+            <p class="text-xl">امتیاز شما: <span id="final-score">0</span></p>
+            <p class="text-lg">بهترین امتیاز: <span id="final-high-score">0</span></p>
+            <button id="restart-button">شروع مجدد</button>
         </div>
     </div>
 
     <script>
-        // گرفتن ارجاع به عناصر HTML با استفاده از ID
-        const birthdayBox = document.getElementById('birthdayBox');
-        const messageBox = document.getElementById('messageBox');
-        let messageTimeout; // متغیری برای ذخیره تایم‌اوت پنهان کردن پیام
+        const canvas = document.getElementById('gameCanvas');
+        const ctx = canvas.getContext('2d');
+        const gameOverScreen = document.getElementById('game-over-screen');
+        const restartButton = document.getElementById('restart-button');
+        const scoreDisplay = document.getElementById('score');
+        const highScoreDisplay = document.getElementById('high-score');
+        const finalScoreDisplay = document.getElementById('final-score');
+        const finalHighScoreDisplay = document.getElementById('final-high-score');
 
-        // تابع برای نمایش پیام تبریک
-        function showMessageBox() {
-            // پاک کردن تایم‌اوت قبلی در صورت وجود (برای جلوگیری از تداخل)
-            clearTimeout(messageTimeout);
+        // تنظیم اندازه بوم بر اساس اندازه کانتینر و دستگاه
+        function resizeCanvas() {
+            const container = document.querySelector('.game-container');
+            const aspectRatio = 9 / 16; // نسبت تصویر برای Flappy Bird (پرتره)
+            let width = container.clientWidth - 40; // 40px padding
+            let height = width / aspectRatio;
 
-            // نمایش پیام با تغییر opacity و اضافه کردن کلاس انیمیشن
-            messageBox.classList.remove('opacity-0', 'pointer-events-none');
-            messageBox.classList.add('opacity-100', 'fade-in-out');
+            // محدود کردن حداکثر ابعاد
+            const maxAllowedHeight = window.innerHeight - 80; // با کمی فاصله از لبه های صفحه
+            const maxAllowedWidth = window.innerWidth - 40;
 
-            // تنظیم تایم‌اوت برای پنهان کردن پیام پس از 3 ثانیه
-            messageTimeout = setTimeout(() => {
-                hideMessageBox();
-            }, 3000);
+            if (height > maxAllowedHeight) {
+                height = maxAllowedHeight;
+                width = height * aspectRatio;
+            }
+            if (width > maxAllowedWidth) {
+                width = maxAllowedWidth;
+                height = width / aspectRatio;
+            }
+
+            canvas.width = width;
+            canvas.height = height;
         }
 
-        // تابع برای پنهان کردن پیام تبریک
-        function hideMessageBox() {
-            // پنهان کردن پیام با تغییر opacity و حذف کلاس انیمیشن
-            messageBox.classList.remove('opacity-100', 'fade-in-out');
-            messageBox.classList.add('opacity-0', 'pointer-events-none');
+        window.addEventListener('resize', resizeCanvas);
+        resizeCanvas(); // تنظیم اولیه
+
+        // متغیرهای بازی
+        let birdX = 50;
+        let birdY = canvas.height / 2;
+        let birdVelocity = 0;
+        const gravity = 0.5;
+        const flapStrength = -8;
+        const birdRadius = 20;
+
+        const pipeWidth = 60;
+        const pipeGap = 150; // فاصله عمودی بین لوله های بالا و پایین
+        const pipeSpeed = 3;
+        const pipes = [];
+
+        let score = 0;
+        let highScore = localStorage.getItem('flappyBirdHighScore') || 0;
+        let gameRunning = false;
+        let animationFrameId;
+
+        // به‌روزرسانی نمایش بهترین امتیاز
+        highScoreDisplay.textContent = `بالاترین امتیاز: ${highScore}`;
+
+        // کشیدن پرنده
+        function drawBird() {
+            ctx.beginPath();
+            ctx.arc(birdX, birdY, birdRadius, 0, Math.PI * 2);
+            ctx.fillStyle = 'yellow';
+            ctx.fill();
+            ctx.strokeStyle = 'orange';
+            ctx.lineWidth = 2;
+            ctx.stroke();
+
+            // چشم پرنده
+            ctx.beginPath();
+            ctx.arc(birdX + 8, birdY - 8, 4, 0, Math.PI * 2);
+            ctx.fillStyle = 'black';
+            ctx.fill();
+
+            // نوک پرنده
+            ctx.beginPath();
+            ctx.moveTo(birdX + birdRadius, birdY - 5);
+            ctx.lineTo(birdX + birdRadius + 15, birdY);
+            ctx.lineTo(birdX + birdRadius, birdY + 5);
+            ctx.fillStyle = 'orange';
+            ctx.fill();
         }
 
-        // اضافه کردن event listener برای کلیک روی جعبه تبریک
-        birthdayBox.addEventListener('click', showMessageBox);
+        // کشیدن لوله‌ها
+        function drawPipes() {
+            pipes.forEach(pipe => {
+                ctx.fillStyle = '#27ae60'; // سبز تیره
+                ctx.strokeStyle = '#2ecc71'; // سبز روشن‌تر
+                ctx.lineWidth = 3;
 
-        // اضافه کردن event listener برای کلیک روی خود پیام (اختیاری: برای بستن سریع‌تر)
-        messageBox.addEventListener('click', hideMessageBox);
+                // لوله بالا
+                ctx.fillRect(pipe.x, 0, pipeWidth, pipe.top);
+                ctx.strokeRect(pipe.x, 0, pipeWidth, pipe.top);
+
+                // لوله پایین
+                ctx.fillRect(pipe.x, pipe.bottom, pipeWidth, canvas.height - pipe.bottom);
+                ctx.strokeRect(pipe.x, pipe.bottom, pipeWidth, canvas.height - pipe.bottom);
+            });
+        }
+
+        // تولید لوله‌های جدید
+        function generatePipe() {
+            const minHeight = canvas.height / 8;
+            const maxHeight = canvas.height / 2;
+            const topHeight = Math.random() * (maxHeight - minHeight) + minHeight;
+            const bottomHeight = topHeight + pipeGap;
+
+            pipes.push({
+                x: canvas.width,
+                top: topHeight,
+                bottom: bottomHeight,
+                passed: false
+            });
+        }
+
+        // به‌روزرسانی وضعیت بازی
+        function update() {
+            if (!gameRunning) return;
+
+            // حرکت پرنده
+            birdVelocity += gravity;
+            birdY += birdVelocity;
+
+            // تشخیص برخورد با سقف یا زمین
+            if (birdY + birdRadius > canvas.height || birdY - birdRadius < 0) {
+                gameOver();
+                return;
+            }
+
+            // حرکت لوله‌ها
+            pipes.forEach(pipe => {
+                pipe.x -= pipeSpeed;
+
+                // تشخیص برخورد با لوله
+                const birdLeft = birdX - birdRadius;
+                const birdRight = birdX + birdRadius;
+                const birdTop = birdY - birdRadius;
+                const birdBottom = birdY + birdRadius;
+
+                // برخورد با لوله
+                if (
+                    birdRight > pipe.x &&
+                    birdLeft < pipe.x + pipeWidth &&
+                    (birdTop < pipe.top || birdBottom > pipe.bottom)
+                ) {
+                    gameOver();
+                    return;
+                }
+
+                // افزایش امتیاز
+                if (pipe.x + pipeWidth < birdX && !pipe.passed) {
+                    score++;
+                    scoreDisplay.textContent = `امتیاز: ${score}`;
+                    pipe.passed = true;
+                }
+            });
+
+            // حذف لوله‌های خارج از صفحه
+            if (pipes.length > 0 && pipes[0].x < -pipeWidth) {
+                pipes.shift();
+            }
+
+            // تولید لوله‌های جدید (اگر تعداد لوله‌ها کم است)
+            if (pipes.length === 0 || pipes[pipes.length - 1].x < canvas.width - 200) {
+                generatePipe();
+            }
+
+            // پاک کردن بوم
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            // کشیدن عناصر
+            drawPipes();
+            drawBird();
+
+            // درخواست فریم انیمیشن بعدی
+            animationFrameId = requestAnimationFrame(update);
+        }
+
+        // پایان بازی
+        function gameOver() {
+            gameRunning = false;
+            cancelAnimationFrame(animationFrameId); // متوقف کردن حلقه انیمیشن
+
+            if (score > highScore) {
+                highScore = score;
+                localStorage.setItem('flappyBirdHighScore', highScore);
+                highScoreDisplay.textContent = `بالاترین امتیاز: ${highScore}`;
+            }
+
+            finalScoreDisplay.textContent = score;
+            finalHighScoreDisplay.textContent = highScore;
+            gameOverScreen.classList.add('active'); // نمایش صفحه پایان بازی
+        }
+
+        // شروع مجدد بازی
+        function restartGame() {
+            gameOverScreen.classList.remove('active'); // مخفی کردن صفحه پایان بازی
+            
+            // بازنشانی متغیرها
+            birdY = canvas.height / 2;
+            birdVelocity = 0;
+            pipes.length = 0; // پاک کردن همه لوله‌ها
+            score = 0;
+            scoreDisplay.textContent = `امتیاز: ${score}`;
+            highScoreDisplay.textContent = `بالاترین امتیاز: ${highScore}`; // اطمینان از نمایش آخرین بالاترین امتیاز
+
+            // شروع بازی
+            gameRunning = true;
+            generatePipe(); // ایجاد اولین لوله
+            update(); // شروع حلقه بازی
+        }
+
+        // کنترل‌های ورودی (کلیک ماوس یا لمس صفحه)
+        function flap() {
+            if (!gameRunning) {
+                restartGame(); // اگر بازی در حال اجرا نیست، شروع مجدد
+            } else {
+                birdVelocity = flapStrength;
+            }
+        }
+
+        canvas.addEventListener('click', flap);
+        canvas.addEventListener('touchstart', flap); // برای دستگاه‌های لمسی
+        restartButton.addEventListener('click', restartGame);
+
+        // اجرای اولیه بازی برای نمایش پرنده قبل از شروع
+        function initializeGameDisplay() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            drawBird();
+            scoreDisplay.textContent = `امتیاز: ${score}`;
+            highScoreDisplay.textContent = `بالاترین امتیاز: ${highScore}`;
+            // می‌توانید یک پیام "برای شروع کلیک کنید" نیز اضافه کنید.
+        }
+
+        // شروع نمایش اولیه پس از بارگذاری کامل صفحه
+        window.onload = function() {
+            resizeCanvas(); // اطمینان از تنظیم صحیح اندازه در شروع
+            initializeGameDisplay();
+        };
+
     </script>
 </body>
 </html>
